[workspace]
resolver = "2"
members = ["src/*"]
package.edition = "2021"
package.rust-version = "1.70"
package.license = "Apache-2.0"

[workspace.dependencies]
# Web framework - keeping axum as the main one
actix-web = "4"
axum = "0.7.5"
axum-core = "0.4.3"
axum-extra = { version = "0.9.0", features = ["protobuf"] }
async-graphql-actix-web = { version = "7.0" }
async-graphql = { version = "7.0", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
async-graphql-parser = "7"
async-graphql-value = "7"

# Tower middleware stack
tower = { version = "0.4.13", features = ["util", "timeout", "buffer"] }
tower-http = { version = "0.5.2", features = ["add-extension", "cors", "trace"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

# Async runtime and utilities
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std"] }
futures = "0.3"
async-stream = "0.3"

# Database
sea-orm = { version = "1", features = ["macros", "chrono", "with-uuid", "runtime-tokio-rustls", "postgres-array", "sqlx-all"] }
sea-query = { version = "0.31.0", default-features = false, features = ["thread-safe"] }
sea-schema = { version = "0.15.0", features = ["sqlx-all"]}


# Protobuf and gRPC
prost = { version = "0.13" }
prost-types = "0.13.1"
prost-build = { version = "0.13.1" }
tonic = { version = "0.12.1" }
tonic-build = { version = "0.12.1", features = ["prost"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Utilities
futures-util = { version = "0.3.30", features = [
    "std",
    "io",
    "sink",
    "async-await",
    "async-await-macro",
] }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1.82"
thiserror = "2"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
itertools = { version = "0.14" }
heck = { version = "0.5" }
fnv = { version = "1" }
indexmap = { version = "2", features = ["serde"] }
bytes = "1.7.1"
hex = "0.4"
lazy_static = { version = "1" }