[workspace]
resolver = "2"
members = ["src/*"]
package.edition = "2024"
package.rust-version = "1.86"
package.license = "Apache-2.0"

[workspace.dependencies]
# Web framework - keeping axum as the main one
actix-web = "4"
axum = "0.7.5"
axum-core = "0.4.3"
axum-extra = { version = "0.9.0", features = ["protobuf"] }
async-graphql-actix-web = { version = "7" }
async-graphql-parser = { version = "7" }
async-graphql = { version = "7", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
# async-graphql = { git = "https://github.com/driver005/async-graphql", branch = "master", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
juniper = "0.16.1"

# Tower middleware stack
tower = { version = "0.4.13", features = ["util", "timeout", "buffer"] }
tower-http = { version = "0.5.2", features = ["add-extension", "cors", "trace"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

# http
hyper = { version = "1", features = ["full", "client", "http2"] }
hyper-util = { version = "0.1" }
http-body-util = { version = "0.1" }
reqwest = { version = "0.12", features = ["json"] }

# graphql
cynic-introspection = { version = "3" }
cynic-codegen = { version = "3" }
cynic = { version = "3", features = ["http-reqwest-blocking"] }
dataloader = "0.18"

# Async runtime and utilities
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std"] }
futures = "0.3"
async-stream = "0.3"

# Database
sea-orm = { version = "1", features = ["macros", "chrono", "with-uuid", "runtime-tokio-rustls", "postgres-array", "sqlx-all"] }
sea-query = { version = "0.31.0", default-features = false, features = ["thread-safe"] }
sea-schema = { version = "0.15.0", features = ["sqlx-all"]}


# Protobuf and gRPC
prost = { version = "0.13" }
prost-types = "0.13.1"
prost-build = { version = "0.13.1" }
tonic = { version = "0.13" }
tonic-build = { version = "0.13", features = ["prost"] }
tonic-reflection = { version = "0.13" }
tonic-health = { version = "0.13" }
    


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"


# Utilities
futures-util = { version = "0.3.30", features = [
    "std",
    "io",
    "sink",
    "async-await",
    "async-await-macro",
] }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1.82"
thiserror = "2"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
itertools = { version = "0.14" }
heck = { version = "0.5" }
fnv = { version = "1" }
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
hex = "0.4"
lazy_static = { version = "1" }
ordered-float = { version = "4.0", features = ["serde"] }
once_cell = "1"