[workspace]
members = [ "src/*"]
resolver = "2"
package.edition = "2021"
package.rust-version = "1.70"
package.license = "Apache-2.0"

[workspace.dependencies]
apy = { path = "../core/apy" }

# Web framework
actix-web = "4"

#http
hyper = { version = "1.0", features = ["client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"


# Database
sea-orm = { version = "1.0.0", features = ["macros", "chrono", "with-uuid", "runtime-tokio-rustls", "postgres-array", "sqlx-all"] }
sea-schema = { version = "0.16.0", features = ["sqlx-all"]}

# Utilities
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1.82"
thiserror = "2"
crossbeam = "0.8"
once_cell = "1.19.0"

# Logging
tracing = "0.1.37"
log = "0.4"

# ... other shared dependencies from root Cargo.toml 