[package]
name = "dynamic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
binary = { path = "../binary"}
futures-util = { version = "0.3.30", features = [
    "std",
    "io",
    "sink",
    "async-await",
    "async-await-macro",
] }
indexmap = { version = "2", features = ["serde"] }
fnv = "1.0.7"
thiserror = "1.0.58"
bytes = "1.7.1"
prost = "0.13.1"
async-graphql = { workspace = true }
heck = { version = "0.4.1" }
hex = "0.4"
lazy_static = { version = "1.4.0" }
tonic = { workspace = true }
async-graphql-actix-web = { version = "7.0" }
actix-web = { workspace = true }