[package]
name = "generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-graphql = { version = "7.0", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
sea-orm = { workspace = true }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
proc-macro2 = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["log"] }
sea-schema = { workspace = true }
sea-query = { workspace = true }
protobuf = { workspace = true } 
protobuf-parse = { workspace = true } 

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }

[features]
default = []
with-json = ["sea-orm/with-json"]
with-chrono = ["sea-orm/with-chrono", "async-graphql/chrono"]
with-time = ["sea-orm/with-time", "async-graphql/time"]
with-uuid = ["sea-orm/with-uuid"]
with-decimal = ["sea-orm/with-rust_decimal", "async-graphql/decimal"]
with-bigdecimal = ["sea-orm/with-bigdecimal", "async-graphql/bigdecimal"]
with-postgres-array = ["sea-orm/postgres-array"]
