[package]
name = "common_test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# generator = { path = "../generator"}
apy = { path = "../../core/apy" }
dynamic = { path = "../../core/dynamic" }

actix-web = { workspace = true }
axum = { workspace = true }
actix-protobuf ={ workspace = true }
async-graphql-actix-web = { workspace = true }
async-graphql = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = { workspace = true }
seaography = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-build = { workspace = true }
prost-derive = { workspace = true }
# sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
derive_builder = { workspace = true }
sea-orm = { workspace = true }
protobuf = { workspace = true }
protobuf-parse = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }
# protobuf = { workspace = true }
# protobuf-codegen = { workspace = true }
# protoc-bin-vendored = { workspace = true }