[package]
name = "models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sea-orm = { workspace = true }
common_test ={ path = "../common_test" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }