[package]
name = "protobuf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["tonic"]
tonic = ["dep:tonic-build"]
prost = ["dep:prost-build"]
axum = ["dep:axum", "dep:prost", "dep:axum-core"]

[dependencies]
axum ={ workspace = true, optional = true  }
prost = { workspace = true, optional = true  }
tonic-build = { workspace = true, optional = true }
prost-build = { workspace = true, optional = true }
axum-core = { workspace = true, optional = true }


[dev-dependencies]
insta = "1.34.0"
tempfile = "3.10.1"