[package]
name = "router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
models = { path = "../models" }
#generator = { path = "../generator" }
dynamic = { path = "../../core/dynamic" }

env_logger = "0.11"
log = "0.4"
actix-web = { workspace = true }
actix-protobuf = { workspace = true }
protobuf = { workspace = true }
num-traits = { workspace = true }

serde = { workspace = true }
tokio ={ workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
# sqlx = { workspace = true }
common_test = { path = "../common_test" }
axum = { workspace = true }
axum-extra = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }


async-graphql-actix-web = { version = "7.0" }
async-graphql = { version = "7.0", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
dotenv = "0.15.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
lazy_static = { version = "1.4.0" }
serde_json = { version = "1.0.103" }