[package]
name = "internal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Local
metadata = { path = "../metadata" }
model = { path = "../model" }

serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }