[package]
name = "task"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Local
metadata = { path = "../metadata" }
queue = { path = "../queue" }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }



[features]
default = ["handler"]
handler = []
worker = []