[package]
name = "generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-graphql = { workspace = true }
sea-orm = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
tracing = { workspace = true }
sea-schema = { workspace = true }
sea-query = { workspace = true }


[dev-dependencies]
pretty_assertions = { version = "1.4.0" }

[features]
default = []
with-json = ["sea-orm/with-json"]
with-chrono = ["sea-orm/with-chrono", "async-graphql/chrono"]
with-time = ["sea-orm/with-time", "async-graphql/time"]
with-uuid = ["sea-orm/with-uuid"]
with-decimal = ["sea-orm/with-rust_decimal", "async-graphql/decimal"]
with-bigdecimal = ["sea-orm/with-bigdecimal", "async-graphql/bigdecimal"]
with-postgres-array = ["sea-orm/postgres-array"]
