[package]
name = "macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bae = { version = "0.2", package = "sea-bae", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[lib]
proc-macro = true