[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }