[package]
name = "sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
#local
task = { path = "../task" } 

tokio = { workspace = true }
hyper-util = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
http-body-util = { workspace = true }
