[package]
name = "task"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Local
common = { path = "../common" }
queue = { path = "../queue" }

actix-web = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }



[features]
default = ["handler", "worker"]
handler = []
worker = []
api = []