[package]
name = "utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
queue = { path = "../queue" }
task = { path = "../task" }
common = { path = "../common" }

sea-orm = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
sea-schema = { workspace = true }